# iirs

./: .env.example  .gitignore  README.md  aspire-shop-iirs-presentation.md  chainlit.md  chainlit_app.py  pyproject.toml
docs/: aspire-shop-local-stack.md  e2e-handoff-2026-04-07.md  fault-injection.md  implementation-status.md  issue-1-status.md  live-backend.md  multi-agent-submission-summary.md  submission-runbook.md
fixtures/alerts/: postgres_down.json  redis_down.json
fixtures/ground_truth/: postgres_down.json  redis_down.json
fixtures/live_signatures/: postgres_down.json  redis_down.json
infra/observability/: docker-compose.yml
patches/: aspire-shop-local-e2e.patch
presentation/: index.html  style.css
qa-site/: app.js  index.html  styles.css
qa-site/resources/: IIRS_15min_Readout_Script.html  IIRS_Presentation_Improved.pptx
runbooks/: postgresql-troubleshooting.md  redis-troubleshooting.md
scripts/: bootstrap_aspire_shop.sh  build_submission_zip.sh  inject_aspire_fault.sh  run_observability_stack.sh
src/iirs/: __init__.py  agents.py  backends.py  cli.py  config.py  evals.py  evaluation.py  expectations.py  input_parsing.py  live_signatures.py  llm.py  models.py  utils.py  (+3 more)
submission_artifacts/: eval_deterministic_5runs.json  eval_deterministic_5runs.md  eval_llm_1run.md  evaluation_report.md
tests/: helpers.py  test_backends.py  test_chainlit_app.py  test_chainlit_e2e_matrix.py  test_cli.py  test_config.py  test_evals.py  test_evaluation.py  test_fault_injection.sh  test_live_signatures.py  test_llm.py  test_openai_agents.py  test_pipeline.py
(+5 files in other folders)
