[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "iirs"
version = "0.1.0"
description = "Intelligent Incident Response System foundation slice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "chainlit>=1.1.402",
  "httpx>=0.27.0",
  "langgraph>=0.2.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[project.scripts]
iirs = "iirs.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/iirs"]
